# drug-similarity-evaluator

./: .gitignore  README.md  pyproject.toml
src/drug_similarity_evaluator/: __main__.py
tests/: test_drug_similarity_evaluator.py
tests/resources/: example_file_1.txt
