[tool.poetry]
name = "drug_similarity_evaluator"
version = "0.1.0"
description = ""
authors = ["Shanya <shanyasinghal06@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
rdkit = "^2024.9.4"
typer = "^0.15.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.14.1"
black = "^24.10.0"
ruff = "^0.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"