[tool.poetry]
name = "drug_similarity_evaluator"
version = "0.1.0"
description = ""
authors = ["Shanya <shanyasinghal06@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
rdkit = "^2024.9.4"
typer = "^0.15.1"
rdkit-stubs = "^0.8"

[tool.poetry.group.dev.dependencies]
mypy = "^1.14.1"
black = "^24.10.0"
ruff = "^0.9.2"

[tool.ruff.lint]
select = ["E", "W", "F", "B", "C90", "I", "Q", "SIM", "ANN", "TYP"]

[tool.ruff]
line-length = 88

[tool.mypy]
strict = true
disable_error_code = ["no-any-return"]
files = ["src", "tests"]

[tool.poetry.scripts]
drug-similarity = "drug_similarity_evaluator.__main__:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"